@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/libmnl
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libmnl/ChangeLog,v 1.1 2011/05/01 11:57:20 pva Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libmnl/ChangeLog,v 1.2 2011/05/01 12:15:52 pva Exp $
+
+  01 May 2011; Peter Volkov <pva@gentoo.org> libmnl-1.0.1.ebuild:
+  Put library into / and libmnl.pc into searchable by pkg-config path.
 
 *libmnl-1.0.1 (01 May 2011)
 
